# helm_sar

./: .gitignore  AGENTS.md  README.md  conftest.py  helm_builder.bas  peptide_design_template.xlsx  pyproject.toml  requirements.txt  run_sar.py
data/: cagrilintide_sar.csv  fragmentation_rules.json  ground_truth.json  medi7219_sar.csv  medi7219_sar.html  medi7219_sar.py  pyy_figures.py  pyy_lipidation_scan.csv  pyy_lipidation_scan.py  pyy_sar_halflife.html  pyy_sar_pec50.html  pyy_sar_report.html
docs/superpowers/plans/: 2026-06-06-peptide-design-excel-to-helm.md
docs/superpowers/specs/: 2026-06-06-peptide-design-excel-to-helm-design.md
examples/: cagrilintide_sar.py  cuaac_dashboard.py  medi7219_sar.py  pyy_figures.py  pyy_lipidation_scan.py
monomer_db/: custom_monomers.json  cycpeptmpdb_monomers.json  monomer_db.py
peptide_design/: cli.py  core.py  generator.py  make_template.py  validator.py
sar_report/: __init__.py  assets.py  colors.py  columns.py  flatten.py  html.py  mw.py  pipeline.py  plots.py
scripts/: helm_alignment.py  helm_compare.py  helm_engine.py  helm_parser.py  rdkit_bridge.py  reckoning.py  report.py  residue_colors.py  roundtrip_benchmark.py  smiles_to_helm.py  table_io.py
tests/peptide_design/: test_core.py  test_generator.py  test_integration_pyy.py  test_validator.py
tests/scripts/: test_helm_to_smiles.py  test_sar_engine.py  test_smiles_to_helm.py  test_table_io.py
